# procurement-assistant

./: README.md  docker-compose.yaml
components/backend/: Dockerfile  pyproject.toml
components/backend/src/: app.py  config.py  evaluation.py
components/backend/src/graph/: config_llm.py  graph_builder.py  graph_routes.py  graph_state.py  llm.py  utils.py
components/backend/src/graph/agents/: analytics_agent.py  execution_agent.py  greeting_agent.py  validation_agent.py
components/backend/src/routes/: routes.py  schema.py
components/backend/src/services/: conversation_service.py  mognodb_service.py
components/backend/src/tests/: chat_test.py  eval_test.py
components/etl/: Dockerfile  docker-compose.yaml  pyproject.toml
components/etl/src/: config.py  extractor.py  main.py  mongodb_loader.py  transformer.py  vector_store.py
components/frontend/: pyproject.toml
components/frontend/src/: app.py  utils.py
notebooks/: procurement_data_eda.ipynb
